# ChangeLog for sys-block/mbuffer
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-block/mbuffer/ChangeLog,v 1.30 2012/12/04 22:12:37 wschlich Exp $

  04 Dec 2012; Wolfram Schlich <wschlich@gentoo.org> mbuffer-20121111.ebuild,
  +files/mbuffer-20121111-resolv-multi-order-issue.patch:
  add patch for test phase

  04 Dec 2012; Wolfram Schlich <wschlich@gentoo.org> mbuffer-20121111.ebuild:
  version bump, minor cleanup

*mbuffer-20121111 (04 Dec 2012)

  04 Dec 2012; Wolfram Schlich <wschlich@gentoo.org> +mbuffer-20121111.ebuild:
  version bump, minor cleanup

*mbuffer-20120505 (30 May 2012)

  30 May 2012; Wolfram Schlich <wschlich@gentoo.org> +mbuffer-20120505.ebuild:
  version bump

*mbuffer-20110724 (22 Feb 2012)

  22 Feb 2012; Wolfram Schlich <wschlich@gentoo.org> +mbuffer-20110724.ebuild:
  version bump, removed older masked version

*mbuffer-20100526 (04 Jun 2010)

  04 Jun 2010; Mike Frysinger <vapier@gentoo.org> +mbuffer-20100526.ebuild:
  Version bump.

  22 May 2010; Pacho Ramos <pacho@gentoo.org> mbuffer-20090113.ebuild:
  stable amd64, bug 304089

  11 Feb 2010; Christian Faulhammer <fauli@gentoo.org>
  mbuffer-20090113.ebuild:
  stable x86, bug 304089

  10 Feb 2010; Joseph Jezak <josejx@gentoo.org> mbuffer-20090113.ebuild:
  Marked ppc stable for bug #304089.

  14 Feb 2009; Mike Frysinger <vapier@gentoo.org> mbuffer-20090113.ebuild:
  Fix by John R. Graham for bogus /bin/ksh requirement #258359 by Volker
  Hemmann, and fix test execution #258881 by Jeremy Stent.

*mbuffer-20090113 (08 Feb 2009)

  08 Feb 2009; Mike Frysinger <vapier@gentoo.org> +mbuffer-20090113.ebuild:
  Version bump.

  04 Dec 2007; nixnut <nixnut@gentoo.org> mbuffer-20070911.ebuild:
  Stable on ppc wrt bug 201037

  03 Dec 2007; Christoph Mende <angelos@gentoo.org> mbuffer-20070911.ebuild:
  Stable on amd64 wrt bug #201037

  03 Dec 2007; Christian Faulhammer <opfer@gentoo.org>
  mbuffer-20070911.ebuild: