@@ -1,0 +1,13 @@
+DEFINED_PHASES=configure install prepare
+DEPEND=ssl? ( dev-libs/openssl )
+DESCRIPTION=M(easuring)buffer is a replacement for buffer with additional functionality
+EAPI=4
+HOMEPAGE=http://www.maier-komor.de/mbuffer.html
+IUSE=debug ssl
+KEYWORDS=~amd64 ~ppc ~x86
+LICENSE=GPL-2
+RDEPEND=ssl? ( dev-libs/openssl )
+SLOT=0
+SRC_URI=http://www.maier-komor.de/software/mbuffer/mbuffer-20130220.tgz
+_eclasses_=eutils	63afaaed8aa819fdcb814c7cd39495a2	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28
+_md5_=d82006d21a50b177161704e87c1b5eb3
