@@ -1,11 +1,33 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX mbuffer-20121111-resolv-multi-order-issue.patch 780 SHA256 3d4c2e13eb35da30714daa9032aede1d6d7a8016fe090b3a2f039883f4ccbcbf SHA512 d633b4c5185cbb5eb52cb428002e7227e07819f6d49c9ed353c541c2d9234fe9c1f0c7f40e0a1662e47cd13835927b4eff310aae41181526f68cb7b0174218a4 WHIRLPOOL 7bdb121d8c19361f9a3e998af41e64b552fe3b19e92bc34fe8d9f32cfe14a2e09460c5418592ab2b6762a95dfbfa4f3479be11054226ea3f7b6f26c78b2fbd8e
-DIST mbuffer-20090113.tgz 106584 SHA256 f36988cafefe0489839ed183123a940ae688f5074a2bf97982f68df6d65314f0
+DIST mbuffer-20090113.tgz 106584 SHA256 f36988cafefe0489839ed183123a940ae688f5074a2bf97982f68df6d65314f0 SHA512 4bdb7c68fdc83e9c16bfb6f70ba1614fa255adb9a08bbe4e01eeebb7e8ca981421dc1020c0d6f1cc90b7c5d85380f969ec088ea07d2201a6a79c6f949a40b5b8 WHIRLPOOL fe8a894131af7ce7081a72d16465d08de4d0324489df2c55b07b83d2dfcdd8d77d0837d70a501d0551b9a583bdb38c12d85bc8420733a3f66e174e6faa6e11b9
 DIST mbuffer-20110724.tgz 117321 SHA256 7e69db02ce518f8583cd76c4c8b152c86d4b3527124518cbf450b7bc58cd3c74
 DIST mbuffer-20120505.tgz 117404 SHA256 c8e828056eef1237b08a0581ba4b99b72f850520e602ebfd03864cfdceefdd47 SHA512 64fbd77e5ae95f500b3ecf9065fba4050e67e5063fc52b6316c41708b311ccdb3a8f7a82f0cc65db6448131664c29cae23f2928a9593d833cb247cca891a71e0 WHIRLPOOL 80af2313dbbdbe2162366ad6c038ec29cb640267f0c5914e9643c66869e22ea03d21240a26314ba69f05a5f58e856c00148d2f98817c56f277b149e8cef934b5
 DIST mbuffer-20121111.tgz 120137 SHA256 38359fc57ffbb874c787f337033c833ebf835bc15f430c59b0481dd1bb653c72 SHA512 0d1fce7d6ecbae48f9f782ad969dc742f5672a243b039a740c4be28f358160bf1dfd6d55f89d8562d9dced2eb33c47b25cb85203d39ac3ba4874d96b19b8e8ca WHIRLPOOL ba191cf461c383828439edf2381b55c62082fb1d7c0b941d93679131a570c00b3abad444c39ec71f5f4ba12563c4ff3325c7c70dfffb24ca146c9aad728b070b
+DIST mbuffer-20130220.tgz 120519 SHA256 1d549c3ac7e29c6064b63195141a61253095831cf5d16f419ae6cc342f12c512 SHA512 c7bc866fa465868ceced68c6089b4c666beee43ce5c79d1d712a0ef75559dc3e12c4809fc46bedfa0b44c4f75131c0770ece3cbb75356c860e441dbdd986b899 WHIRLPOOL 4adb204009555574e785cf5f949c802ee1352c6e3111e3126b21ad747e2ac5faeb3d328796d5eb6362dad786aaf7e823f6fbdef1fa97d2d8c0d3c28928dabb1e
 EBUILD mbuffer-20090113.ebuild 919 SHA256 1c59c4a832228a3565b23348c61e825857a0b00d5ff1aa9191130da8a8955663 SHA512 be0dd8b1fde2e05d9a3cfaabd7e778fdea2da43c00bda56eb48aea518676b39dd2e28b4cb9221d300b2e56646782d8143d227c3348e8d618b3b6f314fa2f7778 WHIRLPOOL 1e432623a81c143279b5b68064dac2b7d9d1ce170d7586550333777c45f2696782cefbace57418e2968145d89a88c95f7fcecf07674e39c441b4d06f2c0e1ac9
 EBUILD mbuffer-20110724.ebuild 945 SHA256 e4539d1fb443f59eb188bf5377a06278d4509f8fd6ed605cbdc1d3fb319c430d SHA512 62b3e6cbf97ecd214b8e3dd8cb9b7c2fab1dcd915d5bf6284a943d753ed4cabc6ad92ebe0fc2c81096b8041f8e156a9146dd48019cb832b5b8e9b44ed942a79f WHIRLPOOL 66a1ea539ce91bf526ec0a1caf606fb8696023f83277d974715f2ed3af564ea91e25abcb7e7f9cfab55ac11bdd0863d0b190d9ba475cb7df06bafa4e3803999c
 EBUILD mbuffer-20120505.ebuild 945 SHA256 3b7ce5861a619197e5b805f0d2464518fcd762d2ae6aa31a59d161401049213d SHA512 e761309f7f7cfbf207206d2fc669a604e019522edef8f0aae8b2ba150968b4b6be49a70b60a32b42cddd92b64e9341421a31f69656c62549017d5b29e65d84bc WHIRLPOOL b7234cbc500b16ed30adc3c32729f20d9c450ee3b40f594b826ee932c128448960faab039b30130511ba4097153d15c78b95e75395b7cfed947aea9a2d1351e4
 EBUILD mbuffer-20121111.ebuild 1000 SHA256 d130dc48b491a1219e425455b27d62737fffef4cf4bc86a3e620734c0db4a045 SHA512 612177cab6430563ec18b4e3b3c207f94f9dfbc22ff0a2da54ae5bb0f7a5f3cc27ed53f9841c51a7ec39efcc960f8dc3a9a26ed7bea0b6b04b239e040b124922 WHIRLPOOL 3480bd776ebfba1115fc81eda7a7888f83325adda6edc015546190e2dc12f22594f47bcdbccf7c0a618ee997d38148be81312cbfcb3029aa6bcb8946b86df0e8
-MISC ChangeLog 4846 SHA256 899ea859032e230789dc9362712ebe2bff52579f8b5356299eed289bf2a1c377 SHA512 997ab7c453bcca52bf669cb27fec1298660fb0d3a23818acd2e74bd20f455b19f9a86cab0ce56739fac40b78560d26414786fb2c446a557e5451f01d8d4efedf WHIRLPOOL 6fdee5ead6f5eb83d0b1547ba804b4643e2e90123f129589ee29a343263638952ac7b11529ea870af21e1f66f836b5f65f676a40f53dde7eb9a49e7b36bb44cc
+EBUILD mbuffer-20130220.ebuild 1006 SHA256 70272b6c2fa7afb2a95997f9a359809fa9f6614accbb49e946b47467c843cf2b SHA512 059bf1e095f526e01d66af9441ab7380d80b8725f5257010de251c871f61097b7fa25bc4997e4217814803c22e56be6e3fee668706185541b93d95193dc02625 WHIRLPOOL 11e4d96a65c01808638f41568b6abd658011e50bb0fa87d326775882f79b2f307fcb518fcecf27bde6a94ca8469efadea5bd24767e0db5febed60de90602bcfe
+MISC ChangeLog 5040 SHA256 a87f6aba062a6fcc3638b15a33bd3d93abc231c52e89bef86f9456f0bd46cad3 SHA512 2aed536be8190351bc0fce6130de04d01568af024c38fe15b7b4acec780e59777a641b1e9a1b9cc2a67d19534a3b9a8b789e1556043dbbdbd5a32d2ceae4f356 WHIRLPOOL 34cc8a903e16877ea3a883a1e19a4fc74987162fb559920d1b7f09b6cb807184a7506b77647eb7d4d75d19c22f39339e77e343e3b4b9c8d737c051d2b4cc7aa2
 MISC metadata.xml 164 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92 SHA512 8eb0d5153d388f6ea069c64b93882244816a0a09aecc0d73cb872121ce0eb24c5ccafa96aad0b620b2300f319e1af101fa7fa6c5d0d561719d49bb07da0a2eca WHIRLPOOL 11a1441bddb7a6c69653c663902b7da5767ae6ad515ac2aabfc42fe37927a1ccc21472deeee454009ff720201a41c3e4a912df42661a0a87150fb46126da2d52
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.20 (GNU/Linux)
+
+iQIcBAEBCAAGBQJSJkn2AAoJECDuEZm+6ExkHsoP/3wQ63bJcMef6jJuCfpqQ/0V
+i0EyzENcOOPpmJY7YRC43oUX/oxF4QOMvn0xzHDS0fOufG+IbS89WDrXbP3clym0
+76b5SnHQMtkpxjjolFULkxkJHCDcZgVQPZE/IHtHgM+SJkIUF8IwjpptLzycuTfl
+srfxNJYwC1LaQpsWCgpXI9Q89lHAI93b1v/GRicmZ9ZIFQFpEwDnw8bmdjGJK6ZL
+KdMPj9VFLpkgqxRkCN5W6KmlUrBGG3vKIjY78l8w4+mfu5UgvswLcPS2iqNcb0LG
+3Wx+Vbtt7ewQm3p+xqkWSrVpEaIULLmMo/SdFSCw+XJTRlVeKOerL2aX+grx+i7R
+WtAZ1HTD/fD5B/fqmPzzkIdO+APwEcXFb3vIMUdkr1PUFi1NiZPecZaYW6MyuBlY
+Yh1pTiDjuHZ6QcJDEAgfzBVpycn4di+FqvxWGmYpko+HKZwPMwnFv4TzmfV8E9or
+KWBO/OwYKzowdGgKE/aX7Q93HfnK3HWjOW6HAPXYdeIyzmCaZb8lK8Uu4CY+QGSM
+bqCBpKU9ZLKAkj+O1abZY2pxSZLZMykXOcf0Zr1PDTYKDlVH/MkU/AZgAPX7ozAx
+ihp1OZYqc3wduzmF40C4+Xf0TyO3e5lgJYpmNbGj3faMb4fp/I1Y0Ox3jBtol7b2
+i67TP1DUC0N+INZaMSiC
+=iK8B
+-----END PGP SIGNATURE-----
