@@ -1,6 +1,12 @@
 # ChangeLog for sys-block/mbuffer
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-block/mbuffer/ChangeLog,v 1.30 2012/12/04 22:12:37 wschlich Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-block/mbuffer/ChangeLog,v 1.31 2013/09/03 20:43:49 ryao Exp $
+
+*mbuffer-20130220 (03 Sep 2013)
+
+  03 Sep 2013; Richard Yao <ryao@gentoo.org> +mbuffer-20130220.ebuild:
+  Version bump to 20130220; non-maintainer commit approved by Cardoe (base-
+  system) in IRC
 
   04 Dec 2012; Wolfram Schlich <wschlich@gentoo.org> mbuffer-20121111.ebuild,
   +files/mbuffer-20121111-resolv-multi-order-issue.patch:
